--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "react": "^17.0.2",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^5.0.6",
     "react-router-dom": "^6.2.1",
