--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-loader-spinner": "^5.0.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "sweetalert2": "^11.3.5",
+    "sweetalert2-react-content": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
